several afew changes

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,7 @@ override.tf.json
 #
 # !example_override.tf
 
+resources.md
+
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
